[package]
name = "tsp_samplers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tsp_samplers"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module"] }
rand = { version = "0.8.5", features = ['small_rng'] }
rand_chacha = { version = "0.3.1", features = ['simd'] }
rustc-hash = "1.1.0"
tsptools = { git = "https://github.com/gero0/tsptools" }

