[package]
name = "tsp_samplers"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.4", features = ['derive'] }
rand = { version = "0.8.5", features = ['small_rng'] }
rand_chacha = { version = "0.3.1", features = ['simd'] }
rustc-hash = "1.1.0"
chrono = "0.4.23"
permutations_iter = "0.1.1"
